had to switch to python 3.11 for tensorflow, fixed a bug where the question and answer would go blank after any speech post was sent, not just a successful one, adjusting css styling so the text doesnt go out of the box

--- a/app/View/static/css/main.css
+++ b/app/View/static/css/main.css
@@ -25,7 +25,7 @@ body {
 }
 
 .body {
-    font-size: 20px;
+    font-size: 18px;
     color: #fff;
     text-align: center;
     margin-bottom: 20px;
@@ -44,13 +44,18 @@ body {
     height: 75vh;
     padding: 20px;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 6fr;
+    grid-template-rows: 1fr 1fr 1fr 10fr;
 
-    background: rgba(211, 211, 211, 0.55);
+    background: rgba(209, 209, 209, 0.55);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(13px);
+    -webkit-backdrop-filter: blur(13px);
     border: 1px solid rgba(255, 255, 255, 0.15);
-    
+    overflow-y: scroll;
+}
+
+/* Customize scrollbar */
+.square::-webkit-scrollbar {
+    width: 0px; /* Width of the scrollbar */
 }
